+footer fix +button visibility

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ img{
 }
 
 .text {
-    color: white;
+    color: #ABB4FE;
     font-size: 18px;
 }
 
